backend_api_service/deploy/app/leaforg-backend-api-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: leaforg-app-backend
  name: leaforg-app-backend
spec:
  minReadySeconds: 5
  replicas: 3
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: leaforg-app-backend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: leaforg-app-backend
    spec:
      affinity:
        podAntiAffinity:
         preferredDuringSchedulingIgnoredDuringExecution:
           - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: app 
                    operator: In
                    values:
                      - backend
              topologyKey: kubernetes.io/hostname
             weight: 100
      containers:
        - name: leaforg-app
          image: docker.io/andie2120/leaforg-app-backend-api:v1.0.2
          imagePullPolicy: Always
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 15
            tcpSocket:
              port: 80
            timeoutSeconds: 30
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            tcpSocket:
              port: 80
          resources:
            limits:
              cpu: 200m
              memory: 400M
            requests:
              cpu: 100m
              memory: 200M
          volumeMounts:
          - name: leaforg-app-secret
            mountPath: "/var/www/html/secret"
            readOnly: true
          ports:
          - containerPort: 80
            protocol: TCP
      volumes:
      - name: leaforg-app-secret
        secret:
          secretName: leaforg-app-secret
      imagePullSecrets:
      - name: regsecret
