backend_api_service/deploy/app/leaforg-backend-api-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: leaforg-app-backend
  name: leaforg-app-backend
  namespace: default
spec:
  selector:
    app: leaforg-app
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
